RESOLVED FIXED83234
DFG InstanceOf should not uselessly speculate cell
https://bugs.webkit.org/show_bug.cgi?id=83234
Summary DFG InstanceOf should not uselessly speculate cell
Filip Pizlo
Reported 2012-04-04 16:31:50 PDT
A useless speculation is one that: 1) Is performed on a value that dies at the point of speculation. 2) Handling the case where the speculation would fail is trivial and takes fewer instructions than an OSR exit trampoline (i.e. <12 bytes on x86). InstanceOf has a SpeculateCell optimization, which is probably great most of the time, but there are times when you do something like: if (o.f instanceof p) The temporary result of o.f dies immediately. Handling the case where it's not a cell is super easy: just return false. So there's little use in speculating cell here.
Attachments
the patch (1.80 KB, patch)
2012-04-04 16:34 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-04-04 16:34:55 PDT
Created attachment 135717 [details] the patch
Filip Pizlo
Comment 2 2012-04-04 17:59:24 PDT
Note You need to log in before you can comment on or make changes to this bug.