DFG InstanceOf should not uselessly speculate cell https://bugs.webkit.org/show_bug.cgi?id=83234

Reviewed by Oliver Hunt.

If InstanceOf is the only user of its child then don't speculate cell, since
the not-cell case is super easy to handle.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileInstanceOf):



Canonical link: https://commits.webkit.org/100605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113269 268f45cc-cd09-0410-ab3c-d52691b4dbfc